# gcc-cmake-tasks

./: .gitignore  README.md
cmakeTask1/: CMakeLists.txt
cmakeTask1/app/: CMakeLists.txt  mainapp.cpp
cmakeTask1/src/: CMakeLists.txt  mymath.cpp
cmakeTask2/: CMakeLists.txt  cmake_tasks_config.json
cmakeTask2/app/: mainapp.cpp
gccTask1/app/: mainapp.cpp
gccTask1/include/: mymath.h
